updated config for raft and changed the tests

--- a/cfg/config.env
+++ b/cfg/config.env
@@ -1,8 +1,6 @@
-WELCOME="Hello, I am a server."
-EXAMPLE_TIMEOUT=10
-ENDPOINT_PORT=1234
 HTTP_ADDR=127.0.0.1
 RAFT_ADDR=127.0.0.1
 HTTP_PORT=11000
 RAFT_PORT=12000
-
+RAFT_DATA_DIR=/usr/bruh/awesomefolder
+BOOTSTRAP=True
