joinport in conf fixed

--- a/cfg/config.env
+++ b/cfg/config.env
@@ -4,7 +4,8 @@ TCP_PORT=4321
 LOG_LEVEL=1
 HTTP_ADDR=127.0.0.1
 RAFT_ADDR=127.0.0.1
-HTTP_PORT=11000
-RAFT_PORT=12000
-RAFT_DATA_DIR=/usr/bruh/awesomefolder
-BOOTSTRAP=True
+RAFT_PORT=7000
+HTTP_PORT=8000
+JOIN_PORT=1
+RAFT_DATA_DIR=./raft/test
+BOOTSTRAP=true
