--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     volumes:
       - ../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: go run ../cmd/main.go
+    command: go run ./cmd/
     env_file: ../cfg/config.env
