--- a/deployments/dev/docker-compose.dev.yml
+++ b/deployments/dev/docker-compose.dev.yml
@@ -8,44 +8,45 @@ services:
     volumes:
     - ../../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: bash -c "mkdir /raft-data && go run ./cmd/"
+    command: go run ./cmd/
     env_file: leader_config.env
     ports:
     - "8000:8000"
     networks:
-      vpcbr:
+      front:
         ipv4_address: 10.5.0.2
   follower1:
     image: golang:latest
     volumes:
       - ../../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: bash -c "mkdir /raft-data && go run ./cmd/"
+    command: go run ./cmd/
     env_file: follower1_config.env
     depends_on: 
     - leader
     ports:
     - "8001:8001"
     networks:
-      vpcbr:
+      front:
         ipv4_address: 10.5.0.3
   follower2:
     image: golang:latest
     volumes:
       - ../../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: bash -c "mkdir /raft-data && go run ./cmd/"
+    command: go run ./cmd/
     env_file: follower2_config.env
     depends_on: 
     - leader
     ports:
     - "8002:8002"
     networks:
-      vpcbr:
+      front:
         ipv4_address: 10.5.0.4
-  networks:
-  vpcbr:
+networks:
+  front:
     ipam:
-     config:
-       - subnet: 10.5.0.0/16
-         gateway: 10.5.0.1
+      driver: default
+      config:
+        - subnet: 10.5.0.0/16
+
