autojoin now partially working

--- a/deployments/dev/follower2_config.env
+++ b/deployments/dev/follower2_config.env
@@ -5,8 +5,9 @@ LOG_LEVEL=1
 HTTP_ADDR=0.0.0.0
 RAFT_ADDR=10.5.0.4
 JOIN_ADDR=10.5.0.2
-RAFT_PORT=7002
-HTTP_PORT=8002
+RAFT_PORT=7000
+HTTP_PORT=8000
 JOIN_PORT=8000
 RAFT_DATA_DIR=/raft-data
 BOOTSTRAP=false
+AUTOJOIN=false
