--- a/deployments/dev/follower1_config.env
+++ b/deployments/dev/follower1_config.env
@@ -5,8 +5,9 @@ LOG_LEVEL=1
 HTTP_ADDR=0.0.0.0
 RAFT_ADDR=10.5.0.3
 JOIN_ADDR=10.5.0.2
-RAFT_PORT=7001
-HTTP_PORT=8001
-JOIN_PORT=8000
+RAFT_PORT=7000
+HTTP_PORT=8000
+JOIN_PORT=1
 RAFT_DATA_DIR=/raft-data
 BOOTSTRAP=false
+AUTOJOIN=true
