autojoin conf disabled

--- a/deployments/dev/follower1_config.env
+++ b/deployments/dev/follower1_config.env
@@ -7,7 +7,8 @@ RAFT_ADDR=10.5.0.3
 JOIN_ADDR=10.5.0.2
 RAFT_PORT=7000
 HTTP_PORT=8000
-JOIN_PORT=1
+JOIN_PORT=8000
 RAFT_DATA_DIR=/raft-data
 BOOTSTRAP=false
-AUTOJOIN=true
+AUTOJOIN=false
+AUTOJOIN_PORT=9000
