bit of refactoring and renaming

--- a/cfg/config.env
+++ b/cfg/config.env
@@ -1,11 +1,13 @@
+
+# General
 HOSTNAME=peter
-UDP_PORT=1234
-TCP_PORT=4321
-LOG_LEVEL=1
-HTTP_ADDR=127.0.0.1
-RAFT_ADDR=127.0.0.1
-RAFT_PORT=7000
-HTTP_PORT=8000
-JOIN_PORT=1
-RAFT_DATA_DIR=./raft/test
-BOOTSTRAP=true
+LOG_LEVEL=1     #default: 1
+
+HTTP_ADDR=127.0.0.1;        #http address
+RAFT_ADDR=127.0.0.1;        #raft address
+HTTP_PORT=8000;             #http port over which the raft cluster
+RAFT_PORT=7000;             #raft port over which the raft cluster communicates
+RAFT_DATA_DIR=/raft-data;   #directory where data is stored
+BOOTSTRAP=true;             #first server in cluster bootstraps
+#JOIN_ADDRESS=              #address of a node in the cluster where node can join
+AUTOJOIN=false;             #if server should try to autojoin a cluster if no join-address is given
