added master branch and fixed build and test jobs in workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,13 @@ name: Go
 
 on:
   push:
-    branches: [ develop ]
+    branches:
+     - develop
+     - master
   pull_request:
-    branches: [ develop ]
+    branches:
+     - develop
+     - master
 
 jobs:
 
@@ -31,7 +35,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./cmd
+      run: go build -v ./cmd/main.go
 
     - name: Test
-      run: go test -v ./test
+      run: go test -v ./...
