--- a/deployments/dev/follower1_config.env
+++ b/deployments/dev/follower1_config.env
@@ -1,14 +1,9 @@
 HOSTNAME=follower1
-UDP_PORT=1234
-TCP_PORT=4321
 LOG_LEVEL=1
 HTTP_ADDR=0.0.0.0
 RAFT_ADDR=10.5.0.3
-JOIN_ADDR=10.5.0.2
 RAFT_PORT=7000
 HTTP_PORT=8000
-JOIN_PORT=8000
-RAFT_DATA_DIR=/raft-data
 BOOTSTRAP=false
-AUTOJOIN=false
-AUTOJOIN_PORT=9000
+AUTO_JOIN=true
+DATA_DIR=./follower1-test
