--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./cmd/main.go
+      run: go build ./cmd/main.go
 
     - name: Test
-      run: go test -v ./...
+      run: go test ./...
