--- a/cfg/config.env
+++ b/cfg/config.env
@@ -1,18 +1,19 @@
 
 # General
 HOSTNAME=peter
-LOG_LEVEL=1			#default: 1
+LOG_LEVEL=1                 #default: 1
 DATA_DIR=/alexandria-data	#directory where data is stored
-BOOTSTRAP=truev			#first server in cluster bootstraps
-AUTOJOIN=true			#node tries to autojoin cluster if no join-addr is given
+LB_IP=192.168.0.1:8080      #loadbalancer ip address
+BOOTSTRAP=true			    #first server in cluster bootstraps
+AUTOJOIN=true			    #node tries to autojoin cluster if no join-addr is given
 HEALTHCHECK_INTERVAL=400	#in ms
 
 # Adresses
-HTTP_ADDR=127.0.0.1		#http address
-RAFT_ADDR=127.0.0.1		#raft address
+HTTP_ADDR=127.0.0.1		    #http address
+RAFT_ADDR=127.0.0.1		    #raft address
 #JOIN_ADDRESS=1.2.3.4		#address of a node in the cluster where node can join
 
 # Ports
-HTTP_PORT=8000			#http port over which the raft cluster
-RAFT_PORT=7000			#raft port over which the raft cluster communicates
+HTTP_PORT=8000			    #http port over which the raft cluster
+RAFT_PORT=7000			    #raft port over which the raft cluster communicates
 
