--- a/deployments/dev/docker-compose.dev.yml
+++ b/deployments/dev/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
     volumes:
     - ../../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: go run ./cmd/
+    command: go run ./cmd/main.go
     env_file: leader_config.env
     ports:
     - "8000:8000"
@@ -24,7 +24,7 @@ services:
     volumes:
       - ../../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: go run ./cmd/
+    command: go run ./cmd/main.go
     env_file: follower1_config.env
     depends_on: 
     - leader
@@ -42,7 +42,7 @@ services:
     volumes:
       - ../../:/go/src/go-with-compose
     working_dir: /go/src/go-with-compose
-    command: go run ./cmd/
+    command: go run ./cmd/main.go
     env_file: follower2_config.env
     depends_on: 
     - leader
