--- a/deployments/.env
+++ b/deployments/.env
@@ -1,22 +1,23 @@
+
 # General
-HOSTNAME=follower2
+HOSTNAME=peter
 # default: 1
-LOG_LEVEL=2
+LOG_LEVEL=1
 # directory where data is stored
-DATA_DIR=./follower2-test
+DATA_DIR=/alexandria-data
 # loadbalancer ip address
 LB_IP=192.168.198.1:8080
 # first server in cluster bootstraps, default: false
-BOOTSTRAP=false
+BOOTSTRAP=true
 # node tries to autojoin cluster if no join-addr is given
-AUTOJOIN=true
+AUTOJOIN=false
 # in ms, default: 3000
 HEALTHCHECK_INTERVAL=3000
 
 # Adresses
 
-HTTP_ADDR=0.0.0.0
-RAFT_ADDR=10.5.0.4
+HTTP_ADDR=127.0.0.1
+RAFT_ADDR=127.0.0.1
 META_API_ADDR=0.0.0.0
 DNS_API_ADDR=0.0.0.0
 DNS_ADDR=0.0.0.0
