--- a/deployments/dev/lb_config.env
+++ b/deployments/dev/lb_config.env
@@ -1,22 +1,22 @@
 # General
-HOSTNAME=follower1
+HOSTNAME=loadbalancer
 # default: 1
 LOG_LEVEL=2
 # directory where data is stored
-DATA_DIR=./follower1-test
+DATA_DIR=./loadbalancer
 # loadbalancer ip address
-LB_IP=10.5.0.5
+LB_IP=0.0.0.0
 # first server in cluster bootstraps, default: false
 BOOTSTRAP=false
 # node tries to autojoin cluster if no join-addr is given
-AUTOJOIN=true
+AUTOJOIN=false
 # in ms, default: 3000
 HEALTHCHECK_INTERVAL=3000
 
 # Adresses
 
 HTTP_ADDR=0.0.0.0
-RAFT_ADDR=10.5.0.3
+RAFT_ADDR=0.0.0.0
 META_API_ADDR=0.0.0.0
 DNS_API_ADDR=0.0.0.0
 DNS_ADDR=0.0.0.0
