--- a/deployments/dev/testing/docker-compose.test.yml
+++ b/deployments/dev/testing/docker-compose.test.yml
@@ -57,13 +57,13 @@ services:
     networks:
       front:
         ipv4_address: 10.6.0.3
-  follower2:
+  tester:
     image: golang:latest
     volumes:
     - ../../../:/go/src/alexandria
     working_dir: /go/src/alexandria
     command: go test ./...
-    env_file: follower2_config_test.env
+    env_file: tester_config_test.env
     depends_on: 
     - leader
     - follower1
