--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,4 +38,4 @@ jobs:
       run: go build ./cmd/main.go
 
     - name: Test
-      run: go test ./...
+      run: cd deployments/dev/testing && docker-compose -f docker-compose.testing.yml up
