--- a/deployments/dev/testing/docker-compose.test.yml
+++ b/deployments/dev/testing/docker-compose.test.yml
@@ -7,7 +7,7 @@ services:
     volumes:
     - ../../../:/go/src/alexandria
     working_dir: /go/src/alexandria
-    command: go test ./loadbalancing/loadbalancing_test.go
+    command: go run ./cmd/launchlb.go
     env_file: lb_config_test.env
     ports:
     - "8000:8000"
