--- a/deployments/.env
+++ b/deployments/.env
@@ -1,14 +1,13 @@
-
 # General
-HOSTNAME=peter
+HOSTNAME=loadbalancer
 # default: 1
-LOG_LEVEL=1
+LOG_LEVEL=2
 # directory where data is stored
-DATA_DIR=/alexandria-data
+DATA_DIR=./loadbalancer-demo-lb
 # loadbalancer ip address
-LB_IP=192.168.198.1:8080
+LB_IP=0.0.0.0
 # first server in cluster bootstraps, default: false
-BOOTSTRAP=true
+BOOTSTRAP=false
 # node tries to autojoin cluster if no join-addr is given
 AUTOJOIN=false
 # in ms, default: 3000
@@ -16,8 +15,8 @@ HEALTHCHECK_INTERVAL=3000
 
 # Adresses
 
-HTTP_ADDR=127.0.0.1
-RAFT_ADDR=127.0.0.1
+HTTP_ADDR=0.0.0.0
+RAFT_ADDR=0.0.0.0
 META_API_ADDR=0.0.0.0
 DNS_API_ADDR=0.0.0.0
 DNS_ADDR=0.0.0.0
@@ -36,5 +35,5 @@ DNS_API_PORT=10000
 META_API_PORT=20000
 # port over which autojoin requests happen
 UDP_PORT=9000
-# port over which the dns requests happen, default: 52
+# port over which the dns requests happen, default: 53
 DNS_PORT=53
