--- a/deployments/dev/testing/leader_config_test.env
+++ b/deployments/dev/testing/leader_config_test.env
@@ -12,12 +12,14 @@ BOOTSTRAP=true
 AUTOJOIN=false
 # in ms, default: 3000
 HEALTHCHECK_INTERVAL=3000
+# time to forget unresponsive nodes in seconds, default: 3600
+REMOVE_NODE_TIMEOUT=3600
+# in ms, default: 1000
+HEALTHCHECK_REQUEST_TIMEOUT=1000
 
 # Adresses
 
 HTTP_ADDR=0.0.0.0
-LB_IP=192.168.198.1:8080
-RAFT_PORT=7000
 RAFT_ADDR=10.6.0.2
 META_API_ADDR=0.0.0.0
 DNS_API_ADDR=0.0.0.0
