--- a/deployments/dev/testing/lb_config_test.env
+++ b/deployments/dev/testing/lb_config_test.env
@@ -12,6 +12,10 @@ BOOTSTRAP=false
 AUTOJOIN=false
 # in ms, default: 3000
 HEALTHCHECK_INTERVAL=3000
+# time to forget unresponsive nodes in seconds, default: 3600
+REMOVE_NODE_TIMEOUT=3600
+# in ms, default: 1000
+HEALTHCHECK_REQUEST_TIMEOUT=1000
 
 # Adresses
 
