--- a/deployments/dev/lb_config.env
+++ b/deployments/dev/lb_config.env
@@ -6,6 +6,8 @@ LOG_LEVEL=2
 DATA_DIR=./loadbalancer
 # loadbalancer ip address
 LB_IP=0.0.0.0
+# port for registering at loadbalancer
+LB_REGISTRATION_PORT=8080
 # first server in cluster bootstraps, default: false
 BOOTSTRAP=false
 # node tries to autojoin cluster if no join-addr is given
@@ -16,6 +18,8 @@ HEALTHCHECK_INTERVAL=6000
 REMOVE_NODE_TIMEOUT=3600
 # in ms, default: 1000
 HEALTHCHECK_REQUEST_TIMEOUT=1000
+# Port that http pings use
+HTTP_PING_PORT=8080
 
 # Adresses
 
